# EAE_Firmware

./: CMakeLists.txt  README.md
scripts/: build_and_run.sh
src/: CMakeLists.txt  can_sim.cpp  can_sim.hpp  controller.cpp  controller.hpp  main.cpp  pid.cpp  pid.hpp  state_machine.cpp  state_machine.hpp
tests/: CMakeLists.txt  test_pid.cpp  test_state_machine.cpp
